fix pre tag overflow

--- a/assets/less/common.less
+++ b/assets/less/common.less
@@ -9,10 +9,12 @@
 
   & > .body {
     flex: 1 1 auto;
+    min-width: 0;
   }
 
   & > .sidebar {
-    flex: 1 0 auto;
+    flex: none;
+    min-width: 0;
   }
 
   margin: 0 1rem;
