--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -54,3 +54,7 @@ select,
 textarea {
   font: inherit;
 }
+
+pre {
+  overflow-x: auto;
+}
