--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -67,10 +67,12 @@
 
   & > :first-child {
     flex: 0 1 auto;
+    min-width: 0;
   }
 
   & > :last-child {
     flex: 1 1 auto;
+    min-width: 0;
   }
 }
 
